--- a/app/views/tasks/_head.html.erb
+++ b/app/views/tasks/_head.html.erb
@@ -17,7 +17,7 @@
         <li><%= link_to 'Calendar'%></li>
       </div>
       <div class="bottom-list">
-        <li><%= link_to 'Chat' %></li>
+        <li><%= link_to 'Chat', rooms_path%></li>
       </div>
       <div class="bottom-list">
         <li><%= link_to 'Account' %></li>
