--- a/app/views/tasks/_side.html.erb
+++ b/app/views/tasks/_side.html.erb
@@ -1,15 +1,14 @@
-<div class="side-wrapper">
-<div class="new">
-    <%=link_to '新規作成' %>
-</div>
-  <div class="side-bar">
-    <ul class="side-list">
-      <div class="list">
-        <li><%= link_to 'task1'%></li>
-      </div>
-      <div class="list">
-        <li><%= link_to 'task2'%></li>
-      </div>
-    </ul>
+<div class="tasks-side-wrapper">
+  <div class="new">
+    <%=link_to '新規作成', new_task_path %>
+  </div>
+  <div class="tasks-side-bar" id="show">
+    <% @tasks.each do |task| %>
+      <ul class="side-list">
+        <div class="list">
+          <li class="show-list"><%= link_to task.title%></li>
+        </div>
+      </ul>
+    <% end %>
   </div>
 </div>
